--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,60 @@
 @import '~@csstools/normalize.css';
+/* variables */
+
+:root {
+
+  /* colors */
+  --clr-body-white: hsl(0, 0%, 100%);
+  --clr-bg-dark: hsl(0, 0%, 10%);
+  --clr-primary-purple: hsl(310, 100%, 24%);
+  --clr-accent-green: hsl(58, 94%, 44%);
+
+  /* shadow */
+
+/*   --custom-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15); */
+
+  /* Headlines */
+/*   --display-1: 4.5rem; /* Bold, 72px */
+  --heading-1: 3.5rem; /* Bold, 56px */
+  --heading-2: 3rem; /* Bold, 48px */
+  --heading-3: 2rem; /* Bold, 32px */
+  --heading-4: 1.5rem; /* Bold, 24px */
+  }
+html,body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+  body{
+    font-family: "Open Sans", sans-serif;
+    background-color: var(--clr-bg-dark);
+    color: var(--clr-body-white);
+  }
+
+  button{
+    cursor: pointer;
+    display: block;
+    border: none;
+  }
+
+  ul{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+  }
+  a {
+    color: var(--clr-gray-body);
+    cursor: pointer;
+  }
+
+  li{
+    text-decoration: none;
+    list-style: none;
+  }
+
+  .section{
+    padding: 4rem 0;
+  }
+
+  .basic-margin {
+    margin: 0 10%;
+  }
