--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import '~@csstools/normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=NTR&family=Press+Start+2P&display=swap');
+/* font-family: "Press Start 2P" */
 /* variables */
 
 :root {
@@ -14,7 +16,7 @@
 /*   --custom-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15); */
 
   /* Headlines */
-/*   --display-1: 4.5rem; /* Bold, 72px */
+  --display-1: 4.5rem; /* Bold, 72px */
   --heading-1: 3.5rem; /* Bold, 56px */
   --heading-2: 3rem; /* Bold, 48px */
   --heading-3: 2rem; /* Bold, 32px */
@@ -26,7 +28,7 @@ html,body{
   box-sizing: border-box;
 }
   body{
-    font-family: "Open Sans", sans-serif;
+    font-family: "NTR", sans-serif;
     background-color: var(--clr-bg-dark);
     color: var(--clr-body-white);
   }
