--- a/src/App.css
+++ b/src/App.css
@@ -140,3 +140,45 @@
   flex-direction: column-reverse;
  }
 }
+
+
+/* skiils */
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  }
+  .div1 { grid-area: 1 / 1 / 3 / 2; background-color: var(--clr-accent-green);}
+  .div2 { grid-area: 3 / 1 / 4 / 2; background-color: var(--clr-accent-green);}
+  .div3 { grid-area: 4 / 1 / 5 / 2; background-color: var(--clr-primary-purple);}
+  .div4 { grid-area: 5 / 1 / 7 / 2; background-color: var(--clr-primary-purple);}
+  .div5 { grid-area: 1 / 2 / 2 / 4; background-color:var(--clr-primary-purple);}
+  .div6 { grid-area: 2 / 2 / 4 / 4; background-color: var(--clr-primary-purple);}
+  .div7 { grid-area: 4 / 2 / 6 / 3; background-color: var(--clr-accent-green);;}
+  .div8 { grid-area: 6 / 2 / 7 / 4; background-color: var(--clr-accent-green);}
+  .div9 { grid-area: 4 / 3 / 6 / 4; background-color: var(--clr-accent-green);}
+
+.parent {
+  background-color: aqua;
+  width: 80%;
+  place-content: center;
+  margin: auto;
+  padding: 1rem;
+}
+
+.parent ul {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.parent h3{
+  text-align: center;
+  font-size: 20px;
+}
+.parent img {
+  width: 100px;
+}
