--- a/src/App.css
+++ b/src/App.css
@@ -147,8 +147,12 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem;
+  grid-column-gap: 0.8rem;
+  grid-row-gap: 0.8rem;
+  width: 80%;
+  place-content: center;
+  margin: auto;
+  padding: 1rem;
   }
   .div1 { grid-area: 1 / 1 / 3 / 2; background-color: var(--clr-accent-green);}
   .div2 { grid-area: 3 / 1 / 4 / 2; background-color: var(--clr-accent-green);}
@@ -160,25 +164,41 @@
   .div8 { grid-area: 6 / 2 / 7 / 4; background-color: var(--clr-accent-green);}
   .div9 { grid-area: 4 / 3 / 6 / 4; background-color: var(--clr-accent-green);}
 
-.parent {
-  background-color: aqua;
-  width: 80%;
-  place-content: center;
-  margin: auto;
-  padding: 1rem;
-}
 
-.parent ul {
+.parent .tech-stack {
   display: flex;
   gap: 1rem;
   justify-content: center;
   align-items: center;
 }
 
-.parent h3{
+
+.subtitle{
   text-align: center;
-  font-size: 20px;
+  padding: 1rem 0.5rem;
+/*   font-size: 20px; */
 }
 .parent img {
-  width: 100px;
+  max-width: 75px;
+}
+
+@media (max-width: 768px) {
+  .parent{
+    gap: .5rem;
+  }
+  .subtitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .parent img{
+    width: 48px;
+  }
+}
+@media (max-width: 492px) {
+  .parent .tech-stack{
+    flex-direction: column;
+    gap: .5rem;
+  }
 }
