--- a/src/App.css
+++ b/src/App.css
@@ -202,3 +202,20 @@
     gap: .5rem;
   }
 }
+
+
+/* contact */
+.contact{
+  padding: 3rem 0;
+  margin: 0 10%;
+}
+
+.contact h2,p{
+  text-align: center;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
