--- a/src/App.css
+++ b/src/App.css
@@ -210,12 +210,35 @@
   margin: 0 10%;
 }
 
-.contact h2,p{
+.contact h2,.contact p{
   text-align: center;
 }
 .form{
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  margin-right: 40%;
+}
+.form div {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 1rem;
+}
+
+input,textarea{
+  background-color: var(--clr-accent-green);
+  padding: .5rem;
+  border: none;
+  border-bottom: .125rem solid var(--clr-primary-purple);
+}
+.contact .socials{
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
   align-items: center;
+}
+.contact .socials ul {
+  display: flex;
+  gap: 1rem;
 }
 
