--- a/src/App.css
+++ b/src/App.css
@@ -242,3 +242,39 @@ input,textarea{
   gap: 1rem;
 }
 
+/* add styles for mobile and active for contact */
+
+/* footer */
+.footer{
+  padding: 3rem 0 1rem 0;
+  margin: 0 10%;
+}
+.footer h3, .footer span {
+  font-size: 20px;
+  margin: 0;
+}
+
+.footer .row, .footer .links, .footer ul{
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 1rem;
+}
+
+.footer ul:nth-of-type(1){
+  color:var(--clr-accent-green);
+}
+
+.footer .buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer .lang ul{
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
