--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 
 /* about */
 .about{
-  padding: 3rem 0;
+  padding: 4rem 0;
   margin: 0 20%;
 }
 .about button{
@@ -93,7 +93,7 @@
 
 /* projects */
 .projects{
-  padding: 3rem 0;
+  padding: 4rem 0;
   margin: 0 10%;
 }
 
@@ -101,7 +101,7 @@
   display: flex;
   align-items: start;
   gap: 1rem;
-  padding: 2rem 0;
+  padding: 3rem 0;
 }
 
 .project img{
@@ -143,6 +143,9 @@
 
 
 /* skiils */
+.skills{
+  padding: 4rem 0;
+}
 .parent {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -206,7 +209,7 @@
 
 /* contact */
 .contact{
-  padding: 3rem 0;
+  padding: 4rem 0;
   margin: 0 10%;
 }
 
@@ -218,6 +221,7 @@
   flex-direction: column;
   align-items: flex-end;
   margin-right: 40%;
+  padding: 2rem 0;
 }
 .form div {
   display: flex;
@@ -242,12 +246,18 @@ input,textarea{
   gap: 1rem;
 }
 
-/* add styles for mobile and active for contact */
+@media (max-width: 768px) {
+  .form{
+    margin-right: 0;
+    align-items: center;
+  }
+}
 
 /* footer */
 .footer{
   padding: 3rem 0 1rem 0;
   margin: 0 10%;
+  border-top: 0.125rem solid var(--clr-accent-green);
 }
 .footer h3, .footer span {
   font-size: 20px;
@@ -277,4 +287,19 @@ input,textarea{
   gap: 1rem;
   align-items: center;
   justify-content: center;
+}
+
+.footer .buttons{
+  padding: 2rem;
+}
+
+@media (max-width: 768px) {
+  .footer .row{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer small {
+    text-align: center;
+  }
 }
