--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,67 @@
   position: absolute;
   top: 0;
   left: 0;
-  color: var(--clr-accent-green);
-  z-index: -1;
-  text-align: center;
-  transform: translateX(0.5rem);
 }
+
+.glitch{
+  animation: glitch 500ms infinite;
+  animation: 2s ease-in fade-in;
+}
+.glitch span:first-child {
+  animation: glitch 650ms infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+  transform: translate(-0.025em, -0.0125em);
+  opacity: 0.8;
+}
+
+.glitch span:last-child {
+  animation: glitch 375ms infinite;
+  clip-path: polygon(0 80%, 100% 20%, 100% 100%, 0 100%);
+  transform: translate(0.0125em, 0.025em);
+  opacity: 0.8;
+}
+@keyframes glitch {
+  0% {
+    text-shadow: 0.05em 0 0 rgb(255, 0, 157),
+      -0.05em -0.025em 0 var(--clr-accent-green),
+      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  14% {
+    text-shadow: 0.05em 0 0 rgb(255, 0, 157),
+      -0.05em -0.025em 0 var(--clr-accent-green),
+      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  15% {
+    text-shadow: -0.05em -0.025em 0 rgb(255, 0, 157),
+      0.025em 0.025em 0 var(--clr-accent-green),
+      -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  49% {
+    text-shadow: -0.05em -0.025em 0 rgb(255, 0, 157),
+      0.025em 0.025em 0 var(--clr-accent-green),
+      -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  50% {
+    text-shadow: 0.025em 0.05em 0 rgb(255, 0, 157),
+      0.05em 0 0 var(--clr-accent-green), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  99% {
+    text-shadow: 0.025em 0.05em 0 rgb(255, 0, 157),
+      0.05em 0 0 var(--clr-accent-green), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  100% {
+    text-shadow: -0.025em 0 0 rgb(255, 0, 157),
+      -0.025em -0.025em 0 var(--clr-accent-green),
+      -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+}
+
+
+.hero h2{
+  animation: 3s ease-in fade-in;
+}
+
+
 
 @media (max-width: 768px) {
   .title{
@@ -85,9 +141,11 @@
 .about button{
   margin-bottom: 1rem;
 }
+
+
 @media (max-width: 768px) {
   .about{
-    margin: 0 5%;
+    margin: 0 10%;
   }
 }
 
@@ -153,9 +211,9 @@
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 0.8rem;
   grid-row-gap: 0.8rem;
-  width: 80%;
+  /* width: 80%; */
   place-content: center;
-  margin: auto;
+  margin: 0 20%;
   padding: 1rem;
   }
   .div1 { grid-area: 1 / 1 / 3 / 2; background-color: var(--clr-accent-green);}
@@ -168,6 +226,10 @@
   .div8 { grid-area: 6 / 2 / 7 / 4; background-color: var(--clr-accent-green);}
   .div9 { grid-area: 4 / 3 / 6 / 4; background-color: var(--clr-accent-green);}
 
+.parent div{
+  border-radius: .25rem;
+
+}
 
 .parent .tech-stack {
   display: flex;
@@ -189,6 +251,7 @@
 @media (max-width: 768px) {
   .parent{
     gap: .5rem;
+    margin: 0 5%;
   }
   .subtitle{
     display: flex;
@@ -264,6 +327,11 @@ input,textarea{
   font-size: 20px;
   margin: 0;
 }
+.footer span{
+  color: var(--clr-accent-green);
+  transform: translateX(-0.25em);
+  z-index: -1;
+}
 
 .footer .row, .footer .links, .footer ul{
   display: flex;
@@ -272,7 +340,7 @@ input,textarea{
   gap: 1rem;
 }
 
-.footer ul:nth-of-type(1){
+.footer ul:nth-of-type(1) li{
   color:var(--clr-accent-green);
 }
 
@@ -302,5 +370,20 @@ input,textarea{
   }
   .footer small {
     text-align: center;
+  }
+}
+
+
+
+/* animations */
+@keyframes fade-in {
+  0%{
+    opacity: 0;
+  };
+  50%{
+    opacity: .5;
+  };
+  100%{
+    opacity: 1;
   }
 }
