--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@
   flex-grow: 1; /* Fill available space */
   background-color: var(--clr-accent-green);
   padding: 1rem;
+  border-radius: .25rem;
 }
 
 .info{
@@ -216,21 +217,33 @@
   margin: 0 20%;
   padding: 1rem;
   }
-  .div1 { grid-area: 1 / 1 / 3 / 2; background-color: var(--clr-accent-green);}
-  .div2 { grid-area: 3 / 1 / 4 / 2; background-color: var(--clr-accent-green);}
-  .div3 { grid-area: 4 / 1 / 5 / 2; background-color: var(--clr-primary-purple);}
-  .div4 { grid-area: 5 / 1 / 7 / 2; background-color: var(--clr-primary-purple);}
-  .div5 { grid-area: 1 / 2 / 2 / 4; background-color:var(--clr-primary-purple);}
-  .div6 { grid-area: 2 / 2 / 4 / 4; background-color: var(--clr-primary-purple);}
-  .div7 { grid-area: 4 / 2 / 6 / 3; background-color: var(--clr-accent-green);;}
-  .div8 { grid-area: 6 / 2 / 7 / 4; background-color: var(--clr-accent-green);}
-  .div9 { grid-area: 4 / 3 / 6 / 4; background-color: var(--clr-accent-green);}
+  .div1 { grid-area: 1 / 1 / 3 / 2; }
+  .div2 { grid-area: 3 / 1 / 4 / 2; }
+  .div3 { grid-area: 4 / 1 / 5 / 2; }
+  .div4 { grid-area: 5 / 1 / 7 / 2; }
+  .div5 { grid-area: 1 / 2 / 2 / 4; }
+  .div6 { grid-area: 2 / 2 / 4 / 4; }
+  .div7 { grid-area: 4 / 2 / 6 / 3; }
+  .div8 { grid-area: 6 / 2 / 7 / 4; }
+  .div9 { grid-area: 4 / 3 / 6 / 4;}
 
 .parent div{
   border-radius: .25rem;
-
 }
 
+.green, .purple{
+  background-color:rgb(58, 58, 58);
+  color: var(--clr-bg-dark);
+}
+.parent:hover .green{
+  background-color: var(--clr-accent-green);
+  color: var(--clr-primary-purple);
+}
+
+.parent:hover .purple{
+  background-color: var(--clr-primary-purple);
+  color: var(--clr-accent-green);
+}
 .parent .tech-stack {
   display: flex;
   gap: 1rem;
