--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 /*   --custom-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15); */
 
   /* Headlines */
-  --display-1: 4.5rem; /* Bold, 72px */
+  --display-1: 6rem;
   --heading-1: 3.5rem; /* Bold, 56px */
   --heading-2: 3rem; /* Bold, 48px */
   --heading-3: 2rem; /* Bold, 32px */
