--- a/src/App.css
+++ b/src/App.css
@@ -220,11 +220,11 @@
   border-radius: inherit;
   background-image: linear-gradient(
     var(--rotate)
-    , var(--clr-primary-purple), var(--clr-accent-green) 43%, var(--clr-primary-purple));
+    , var(--clr-primary-purple), rgba(0, 0, 255, 0.75) 43%, var(--clr-primary-purple));
   position: absolute;
   top: -1%;
   left: -2%;
-  animation: spin 2.5s linear infinite;
+  animation: spin 2.5s ease-in-out infinite;
   z-index: -1;
 }
 
@@ -232,29 +232,13 @@
 @keyframes spin {
   0% {
     --rotate: 0deg;
+    opacity: 0;
   }
   100% {
     --rotate: 360deg;
+    opacity:1;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -297,6 +281,10 @@
   margin: 0 20%;
   padding: 1rem;
   }
+
+  .parent.glow::after{
+    background-color: transparent;
+  }
   .div1 { grid-area: 1 / 1 / 3 / 2; }
   .div2 { grid-area: 3 / 1 / 4 / 2; }
   .div3 { grid-area: 4 / 1 / 5 / 2; }
@@ -316,12 +304,12 @@
   color: var(--clr-bg-dark);
 }
 .parent:hover .green{
-  background-color: var(--clr-accent-green);
+  background: linear-gradient(0deg, rgba(218,211,7,0.75) 0%, rgba(218,211,7,1) 100%);
   color: var(--clr-primary-purple);
 }
 
 .parent:hover .purple{
-  background-color: var(--clr-primary-purple);
+  background: linear-gradient(0deg, rgba(122, 0, 102,0.75) 0%, rgba(122, 0, 102,1) 100%);
   color: var(--clr-accent-green);
 }
 .parent .tech-stack {
