--- a/src/App.css
+++ b/src/App.css
@@ -138,10 +138,12 @@
   padding: 4rem 0;
   margin: 0 20%;
 }
-.about button{
-  margin-bottom: 1rem;
+.about .buttons-about{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
 }
-
 
 @media (max-width: 768px) {
   .about{
