--- a/src/components/atoms/button.css
+++ b/src/components/atoms/button.css
@@ -1,7 +1,7 @@
 .button{
   background-color: var(--clr-primary-purple);
   color: var(--clr-body-white);
-  font-weight: 700;
+  /* font-weight: 700; */
   /* margin-bottom: 0.5rem; */
   padding: 0.8rem 1.5rem;
   border-radius: .25rem;
@@ -69,7 +69,7 @@
   background: transparent;
 }
 
-/* 
+/*
 .glower {
   position: relative;
   background-color: #FF00FF;
